# BloodyMoon_openCV

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
include/Artist_/Artist/: Artist.hpp
src/: CMakeLists.txt
src/Application/: Application.cpp  Application.hpp
src/Artist/: Artist.cpp
